# Coursework_5

./: README.md  main.py  pyproject.toml
src/: API_HH.py  DBManager.py  database_PostgreSQL.py  list_companies.py
